// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loader should not emit warning by default ('dart-sass', 'modern' API, 'sass' syntax): css 1`] = `
"a {
  color: red;
}"
`;

exports[`loader should not emit warning by default ('dart-sass', 'modern' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning by default ('dart-sass', 'modern' API, 'sass' syntax): logs 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        "file:///<cwd>/sass/logging.sass:0:0: My debug message",
      ],
      "type": "debug",
    },
    Object {
      "args": Array [
        "My warning message

test/sass/logging.sass 2:1  root stylesheet
",
      ],
      "type": "warn",
    },
  ],
]
`;

exports[`loader should not emit warning by default ('dart-sass', 'modern' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`loader should not emit warning by default ('dart-sass', 'modern' API, 'scss' syntax): css 1`] = `
"a {
  color: red;
}"
`;

exports[`loader should not emit warning by default ('dart-sass', 'modern' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning by default ('dart-sass', 'modern' API, 'scss' syntax): logs 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        "file:///<cwd>/scss/logging.scss:0:0: My debug message",
      ],
      "type": "debug",
    },
    Object {
      "args": Array [
        "My warning message

test/scss/logging.scss 2:1  root stylesheet
",
      ],
      "type": "warn",
    },
  ],
]
`;

exports[`loader should not emit warning by default ('dart-sass', 'modern' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`loader should not emit warning by default ('dart-sass', 'old' API, 'sass' syntax): css 1`] = `
"a {
  color: red;
}"
`;

exports[`loader should not emit warning by default ('dart-sass', 'old' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning by default ('dart-sass', 'old' API, 'sass' syntax): logs 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        "file:///<cwd>/sass/logging.sass:0:0: My debug message",
      ],
      "type": "debug",
    },
    Object {
      "args": Array [
        "My warning message

test/sass/logging.sass 2:1  root stylesheet
",
      ],
      "type": "warn",
    },
  ],
]
`;

exports[`loader should not emit warning by default ('dart-sass', 'old' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`loader should not emit warning by default ('dart-sass', 'old' API, 'scss' syntax): css 1`] = `
"a {
  color: red;
}"
`;

exports[`loader should not emit warning by default ('dart-sass', 'old' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning by default ('dart-sass', 'old' API, 'scss' syntax): logs 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        "file:///<cwd>/scss/logging.scss:0:0: My debug message",
      ],
      "type": "debug",
    },
    Object {
      "args": Array [
        "My warning message

test/scss/logging.scss 2:1  root stylesheet
",
      ],
      "type": "warn",
    },
  ],
]
`;

exports[`loader should not emit warning by default ('dart-sass', 'old' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`loader should not emit warning by default ('node-sass', 'old' API, 'sass' syntax): css 1`] = `
"a {
  color: red; }
"
`;

exports[`loader should not emit warning by default ('node-sass', 'old' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning by default ('node-sass', 'old' API, 'sass' syntax): logs 1`] = `Array []`;

exports[`loader should not emit warning by default ('node-sass', 'old' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`loader should not emit warning by default ('node-sass', 'old' API, 'scss' syntax): css 1`] = `
"a {
  color: red; }
"
`;

exports[`loader should not emit warning by default ('node-sass', 'old' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning by default ('node-sass', 'old' API, 'scss' syntax): logs 1`] = `Array []`;

exports[`loader should not emit warning by default ('node-sass', 'old' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`loader should not emit warning by default ('sass-embedded', 'modern' API, 'sass' syntax): css 1`] = `
"a {
  color: red;
}"
`;

exports[`loader should not emit warning by default ('sass-embedded', 'modern' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning by default ('sass-embedded', 'modern' API, 'sass' syntax): logs 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        "file:///<cwd>/sass/logging.sass:0:0: My debug message",
      ],
      "type": "debug",
    },
    Object {
      "args": Array [
        "My warning message

test/sass/logging.sass 2:1  root stylesheet
",
      ],
      "type": "warn",
    },
  ],
]
`;

exports[`loader should not emit warning by default ('sass-embedded', 'modern' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`loader should not emit warning by default ('sass-embedded', 'modern' API, 'scss' syntax): css 1`] = `
"a {
  color: red;
}"
`;

exports[`loader should not emit warning by default ('sass-embedded', 'modern' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning by default ('sass-embedded', 'modern' API, 'scss' syntax): logs 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        "file:///<cwd>/scss/logging.scss:0:0: My debug message",
      ],
      "type": "debug",
    },
    Object {
      "args": Array [
        "My warning message

test/scss/logging.scss 2:1  root stylesheet
",
      ],
      "type": "warn",
    },
  ],
]
`;

exports[`loader should not emit warning by default ('sass-embedded', 'modern' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`loader should not emit warning by default ('sass-embedded', 'old' API, 'sass' syntax): css 1`] = `
"a {
  color: red;
}"
`;

exports[`loader should not emit warning by default ('sass-embedded', 'old' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning by default ('sass-embedded', 'old' API, 'sass' syntax): logs 1`] = `Array []`;

exports[`loader should not emit warning by default ('sass-embedded', 'old' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`loader should not emit warning by default ('sass-embedded', 'old' API, 'scss' syntax): css 1`] = `
"a {
  color: red;
}"
`;

exports[`loader should not emit warning by default ('sass-embedded', 'old' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning by default ('sass-embedded', 'old' API, 'scss' syntax): logs 1`] = `Array []`;

exports[`loader should not emit warning by default ('sass-embedded', 'old' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`loader should not emit warning when 'false' used ('dart-sass', 'modern' API, 'sass' syntax): css 1`] = `
"a {
  color: red;
}"
`;

exports[`loader should not emit warning when 'false' used ('dart-sass', 'modern' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning when 'false' used ('dart-sass', 'modern' API, 'sass' syntax): logs 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        "file:///<cwd>/sass/logging.sass:0:0: My debug message",
      ],
      "type": "debug",
    },
    Object {
      "args": Array [
        "My warning message

test/sass/logging.sass 2:1  root stylesheet
",
      ],
      "type": "warn",
    },
  ],
]
`;

exports[`loader should not emit warning when 'false' used ('dart-sass', 'modern' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`loader should not emit warning when 'false' used ('dart-sass', 'modern' API, 'scss' syntax): css 1`] = `
"a {
  color: red;
}"
`;

exports[`loader should not emit warning when 'false' used ('dart-sass', 'modern' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning when 'false' used ('dart-sass', 'modern' API, 'scss' syntax): logs 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        "file:///<cwd>/scss/logging.scss:0:0: My debug message",
      ],
      "type": "debug",
    },
    Object {
      "args": Array [
        "My warning message

test/scss/logging.scss 2:1  root stylesheet
",
      ],
      "type": "warn",
    },
  ],
]
`;

exports[`loader should not emit warning when 'false' used ('dart-sass', 'modern' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`loader should not emit warning when 'false' used ('dart-sass', 'old' API, 'sass' syntax): css 1`] = `
"a {
  color: red;
}"
`;

exports[`loader should not emit warning when 'false' used ('dart-sass', 'old' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning when 'false' used ('dart-sass', 'old' API, 'sass' syntax): logs 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        "file:///<cwd>/sass/logging.sass:0:0: My debug message",
      ],
      "type": "debug",
    },
    Object {
      "args": Array [
        "My warning message

test/sass/logging.sass 2:1  root stylesheet
",
      ],
      "type": "warn",
    },
  ],
]
`;

exports[`loader should not emit warning when 'false' used ('dart-sass', 'old' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`loader should not emit warning when 'false' used ('dart-sass', 'old' API, 'scss' syntax): css 1`] = `
"a {
  color: red;
}"
`;

exports[`loader should not emit warning when 'false' used ('dart-sass', 'old' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning when 'false' used ('dart-sass', 'old' API, 'scss' syntax): logs 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        "file:///<cwd>/scss/logging.scss:0:0: My debug message",
      ],
      "type": "debug",
    },
    Object {
      "args": Array [
        "My warning message

test/scss/logging.scss 2:1  root stylesheet
",
      ],
      "type": "warn",
    },
  ],
]
`;

exports[`loader should not emit warning when 'false' used ('dart-sass', 'old' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`loader should not emit warning when 'false' used ('node-sass', 'old' API, 'sass' syntax): css 1`] = `
"a {
  color: red; }
"
`;

exports[`loader should not emit warning when 'false' used ('node-sass', 'old' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning when 'false' used ('node-sass', 'old' API, 'sass' syntax): logs 1`] = `Array []`;

exports[`loader should not emit warning when 'false' used ('node-sass', 'old' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`loader should not emit warning when 'false' used ('node-sass', 'old' API, 'scss' syntax): css 1`] = `
"a {
  color: red; }
"
`;

exports[`loader should not emit warning when 'false' used ('node-sass', 'old' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning when 'false' used ('node-sass', 'old' API, 'scss' syntax): logs 1`] = `Array []`;

exports[`loader should not emit warning when 'false' used ('node-sass', 'old' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`loader should not emit warning when 'false' used ('sass-embedded', 'modern' API, 'sass' syntax): css 1`] = `
"a {
  color: red;
}"
`;

exports[`loader should not emit warning when 'false' used ('sass-embedded', 'modern' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning when 'false' used ('sass-embedded', 'modern' API, 'sass' syntax): logs 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        "file:///<cwd>/sass/logging.sass:0:0: My debug message",
      ],
      "type": "debug",
    },
    Object {
      "args": Array [
        "My warning message

test/sass/logging.sass 2:1  root stylesheet
",
      ],
      "type": "warn",
    },
  ],
]
`;

exports[`loader should not emit warning when 'false' used ('sass-embedded', 'modern' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`loader should not emit warning when 'false' used ('sass-embedded', 'modern' API, 'scss' syntax): css 1`] = `
"a {
  color: red;
}"
`;

exports[`loader should not emit warning when 'false' used ('sass-embedded', 'modern' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning when 'false' used ('sass-embedded', 'modern' API, 'scss' syntax): logs 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        "file:///<cwd>/scss/logging.scss:0:0: My debug message",
      ],
      "type": "debug",
    },
    Object {
      "args": Array [
        "My warning message

test/scss/logging.scss 2:1  root stylesheet
",
      ],
      "type": "warn",
    },
  ],
]
`;

exports[`loader should not emit warning when 'false' used ('sass-embedded', 'modern' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`loader should not emit warning when 'false' used ('sass-embedded', 'old' API, 'sass' syntax): css 1`] = `
"a {
  color: red;
}"
`;

exports[`loader should not emit warning when 'false' used ('sass-embedded', 'old' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning when 'false' used ('sass-embedded', 'old' API, 'sass' syntax): logs 1`] = `Array []`;

exports[`loader should not emit warning when 'false' used ('sass-embedded', 'old' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`loader should not emit warning when 'false' used ('sass-embedded', 'old' API, 'scss' syntax): css 1`] = `
"a {
  color: red;
}"
`;

exports[`loader should not emit warning when 'false' used ('sass-embedded', 'old' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning when 'false' used ('sass-embedded', 'old' API, 'scss' syntax): logs 1`] = `Array []`;

exports[`loader should not emit warning when 'false' used ('sass-embedded', 'old' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`loader should not emit warning when 'true' used ('dart-sass', 'modern' API, 'sass' syntax): css 1`] = `
"a {
  color: red;
}"
`;

exports[`loader should not emit warning when 'true' used ('dart-sass', 'modern' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning when 'true' used ('dart-sass', 'modern' API, 'sass' syntax): logs 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        "file:///<cwd>/sass/logging.sass:0:0: My debug message",
      ],
      "type": "debug",
    },
  ],
]
`;

exports[`loader should not emit warning when 'true' used ('dart-sass', 'modern' API, 'sass' syntax): warnings 1`] = `
Array [
  "ModuleWarning: Module Warning (from ../src/cjs.js):
My warning message",
]
`;

exports[`loader should not emit warning when 'true' used ('dart-sass', 'modern' API, 'scss' syntax): css 1`] = `
"a {
  color: red;
}"
`;

exports[`loader should not emit warning when 'true' used ('dart-sass', 'modern' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning when 'true' used ('dart-sass', 'modern' API, 'scss' syntax): logs 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        "file:///<cwd>/scss/logging.scss:0:0: My debug message",
      ],
      "type": "debug",
    },
  ],
]
`;

exports[`loader should not emit warning when 'true' used ('dart-sass', 'modern' API, 'scss' syntax): warnings 1`] = `
Array [
  "ModuleWarning: Module Warning (from ../src/cjs.js):
My warning message",
]
`;

exports[`loader should not emit warning when 'true' used ('dart-sass', 'old' API, 'sass' syntax): css 1`] = `
"a {
  color: red;
}"
`;

exports[`loader should not emit warning when 'true' used ('dart-sass', 'old' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning when 'true' used ('dart-sass', 'old' API, 'sass' syntax): logs 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        "file:///<cwd>/sass/logging.sass:0:0: My debug message",
      ],
      "type": "debug",
    },
  ],
]
`;

exports[`loader should not emit warning when 'true' used ('dart-sass', 'old' API, 'sass' syntax): warnings 1`] = `
Array [
  "ModuleWarning: Module Warning (from ../src/cjs.js):
My warning message",
]
`;

exports[`loader should not emit warning when 'true' used ('dart-sass', 'old' API, 'scss' syntax): css 1`] = `
"a {
  color: red;
}"
`;

exports[`loader should not emit warning when 'true' used ('dart-sass', 'old' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning when 'true' used ('dart-sass', 'old' API, 'scss' syntax): logs 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        "file:///<cwd>/scss/logging.scss:0:0: My debug message",
      ],
      "type": "debug",
    },
  ],
]
`;

exports[`loader should not emit warning when 'true' used ('dart-sass', 'old' API, 'scss' syntax): warnings 1`] = `
Array [
  "ModuleWarning: Module Warning (from ../src/cjs.js):
My warning message",
]
`;

exports[`loader should not emit warning when 'true' used ('node-sass', 'old' API, 'sass' syntax): css 1`] = `
"a {
  color: red; }
"
`;

exports[`loader should not emit warning when 'true' used ('node-sass', 'old' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning when 'true' used ('node-sass', 'old' API, 'sass' syntax): logs 1`] = `Array []`;

exports[`loader should not emit warning when 'true' used ('node-sass', 'old' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`loader should not emit warning when 'true' used ('node-sass', 'old' API, 'scss' syntax): css 1`] = `
"a {
  color: red; }
"
`;

exports[`loader should not emit warning when 'true' used ('node-sass', 'old' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning when 'true' used ('node-sass', 'old' API, 'scss' syntax): logs 1`] = `Array []`;

exports[`loader should not emit warning when 'true' used ('node-sass', 'old' API, 'scss' syntax): warnings 1`] = `Array []`;

exports[`loader should not emit warning when 'true' used ('sass-embedded', 'modern' API, 'sass' syntax): css 1`] = `
"a {
  color: red;
}"
`;

exports[`loader should not emit warning when 'true' used ('sass-embedded', 'modern' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning when 'true' used ('sass-embedded', 'modern' API, 'sass' syntax): logs 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        "file:///<cwd>/sass/logging.sass:0:0: My debug message",
      ],
      "type": "debug",
    },
  ],
]
`;

exports[`loader should not emit warning when 'true' used ('sass-embedded', 'modern' API, 'sass' syntax): warnings 1`] = `
Array [
  "ModuleWarning: Module Warning (from ../src/cjs.js):
My warning message",
]
`;

exports[`loader should not emit warning when 'true' used ('sass-embedded', 'modern' API, 'scss' syntax): css 1`] = `
"a {
  color: red;
}"
`;

exports[`loader should not emit warning when 'true' used ('sass-embedded', 'modern' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning when 'true' used ('sass-embedded', 'modern' API, 'scss' syntax): logs 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        "file:///<cwd>/scss/logging.scss:0:0: My debug message",
      ],
      "type": "debug",
    },
  ],
]
`;

exports[`loader should not emit warning when 'true' used ('sass-embedded', 'modern' API, 'scss' syntax): warnings 1`] = `
Array [
  "ModuleWarning: Module Warning (from ../src/cjs.js):
My warning message",
]
`;

exports[`loader should not emit warning when 'true' used ('sass-embedded', 'old' API, 'sass' syntax): css 1`] = `
"a {
  color: red;
}"
`;

exports[`loader should not emit warning when 'true' used ('sass-embedded', 'old' API, 'sass' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning when 'true' used ('sass-embedded', 'old' API, 'sass' syntax): logs 1`] = `Array []`;

exports[`loader should not emit warning when 'true' used ('sass-embedded', 'old' API, 'sass' syntax): warnings 1`] = `Array []`;

exports[`loader should not emit warning when 'true' used ('sass-embedded', 'old' API, 'scss' syntax): css 1`] = `
"a {
  color: red;
}"
`;

exports[`loader should not emit warning when 'true' used ('sass-embedded', 'old' API, 'scss' syntax): errors 1`] = `Array []`;

exports[`loader should not emit warning when 'true' used ('sass-embedded', 'old' API, 'scss' syntax): logs 1`] = `Array []`;

exports[`loader should not emit warning when 'true' used ('sass-embedded', 'old' API, 'scss' syntax): warnings 1`] = `Array []`;
